--- a/dev/Nitro/get.html
+++ b/dev/Nitro/get.html
@@ -29,7 +29,9 @@
 	
 	<div class="blockfill"></div>
 	<div class="container">
-		<a class="button" href="NitroJS.zip">DOWNLOAD</a>
+		<a class="button" href="NitroJS.zip">Download NitroJS</a> <br>
+		<a class="button" href="smite.zip">Download Smite <span>webapp local</span></a> <br>
+		<a class="button" href="SIDE migrated.jnx">Get Smite <span>liveStream manifest</span></a> <br>
 	</div>
 	
 	<div class="blockfill"></div>
