--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <br>
   <footer>
     2015 NUCLEONBYTES | All Right Reserved
+    
+        <a href='http://pagepeeker.com/' target='_blank'>Thumbshots by PagePeeker</a>
   </footer>
 </body>
 </html>
