--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <footer>
     2015 NUCLEONBYTES | All Right Reserved
     
-        <a href='http://pagepeeker.com/' target='_blank'>Thumbshots by PagePeeker</a>
+        <a href='http://pagepeeker.com/' target='_blank'>Website Screenshots by PagePeeker</a>
   </footer>
 </body>
 </html>
