--- a/dev/Nitro/docs.html
+++ b/dev/Nitro/docs.html
@@ -56,17 +56,9 @@
 	<div class="super">Release Notes</div><br>
 	
 	<div class="sidebar">
-		<h1 id="changes">API v1.8 Out Now!</h1>
-		<p>API version 1.8 is out now with many bug fixes and improvements. This release breaks some of the API in v1 and v1.2. Minor improvements have been made to boost efficiency and extend capabilities of NitroJS. This release brings:</p>
-		<br>
-		<ul>
-			<li>Moved permissions to Manifest</li>
-			<li>Added permission request</li>
-			<li>Updated Alert (now async for most function)</li>
-			<li>Async download with callbacks now in action</li>
-			<li>Async secure download with callbacks now in action</li>
-			<li>'logError' ability now added to debug ~ [v1.8]</li>
-		</ul>
+		<h1 id="changes">API v2.0 & NEW DOCUMENTATION UNDER WAY!</h1>
+		<p>A new documentation site is under construction. It will feature the new v2.0 API. You can check it out now but beware, it is still under construction.</p>
+        <a href="documentation.html">New Documentation Page</a><br>
 		<br>
 	</div>
 	
