--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -22,21 +22,24 @@
         </ul>
     </nav>
     <div id="owl-example" class="owl-carousel">
+        <div><img src="assets/IMG_1727.JPG" alt=""></div>
+        <div><img src="assets/IMG_1617.JPG" alt=""></div>
+        <div><img src="assets/IMG_1725.JPG" alt=""></div>
         <div><img src="assets/IMG_1733.JPG" alt=""></div>
-        <div> <img src="assets/IMG_1740.JPG" alt=""> </div>
-        <div><img src="assets/IMG_1733.JPG" alt=""></div>
-        <div> <img src="assets/IMG_1740.JPG" alt=""> </div>
-        <div><img src="assets/IMG_1733.JPG" alt=""></div>
+        <div><img src="assets/IMG_1737.JPG" alt=""></div>
     </div>
-
+    
+    
+    <div class="dish">FIND OUT HOW TO ENROL YOUR CHILD HERE</div>
 
     <script>
         $(document).ready(function() {
             $("#owl-example").owlCarousel({
-                autoPlay: 3000, //Set AutoPlay to 3 seconds
+                autoPlay: 2000, //Set AutoPlay to 3 seconds
                 items : 1,
-                itemsDesktop : [1199,2],
-                itemsDesktopSmall : [979,1]
+                itemsDesktop : [1199,1],
+                itemsDesktopSmall : [979,1],
+                stopOnHover : true
             });
         });
     </script>
