--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -14,7 +14,7 @@
 			<li class="tagleft"><p style="color:white">Nitro<span style="color:#1FBFBF">JS</span></p></li>
 			<li><a href="#">Home</a></li>
 			<li><a href="get.html">Get it</a></li>
-			<li><a href="docs.html">Documentation</a></li>
+			<li><a href="documentation.html">Documentation</a></li>
 		</ul>
 	</nav>
 	<div class="blockfill"></div>
