--- a/dev/Nitro/kickstart.html
+++ b/dev/Nitro/kickstart.html
@@ -19,7 +19,7 @@
 			<li class="tagleft"><p style="color:white">Nitro<span style="color:#1FBFBF">JS</span> <span style="color:#cc3333">//Kickstart</span></p></li>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="get.html">Get it</a></li>
-			<li><a href="docs.html">Documentation</a></li>
+			<li><a href="documentation.html">Documentation</a></li>
 		</ul>
 	</nav>
 	<div class="blockfill"></div>
