--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Resources</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="Plan.html">Pricing</a></li>
         </ul>
     </nav>
     <div id="owl-example" class="owl-carousel">
