--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -20,8 +20,8 @@
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Pricing</a></li>
         </ul>
     </nav>
@@ -119,6 +119,8 @@
         </table>
     </section>
    
+    <br><br>
+    <br><br>
     <br><br>
     
     <footer>
