--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -20,8 +20,8 @@
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="Plan.html">Pricing</a></li>
         </ul>
     </nav>
