--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -30,7 +30,7 @@
 	<div class="blockfill"></div>
 	
 	<div class="container">
-		<a class="button" href="docs.html">DOCUMENTATION</a>
+		<a class="button" href="documentation.html">DOCUMENTATION</a>
 	</div>
 	
 	<div class="blockfill"></div>
