--- a/dev/Nitro/kickstart.html
+++ b/dev/Nitro/kickstart.html
@@ -111,7 +111,7 @@
 	<div class="container">
 		<p>Now that we have created this very simple web-app, it is ready for execution. There are two ways in which you can execute a .jnx file. First way is to drag the <b>.jnx</b> file over to the <b>NitroJS.exe</b> runtime. The second way is by right-clicking on the <b>.jnx</b> file and clicking 'open with...', then selecting NitroJS.exe </p>
 		<br>
-		<p>And thats it! One very easy platform to develop upon and learn with. Now that you know the basics, why dont you head back to the <a href="docs.html">Documentation</a> page, take a look at our APIs and rustle up your own project. And <b>once you are done, why dont you get in touch for a chance to have your web-app featured on our soon-to-be-released hosting platform.</b></p>
+		<p>And thats it! One very easy platform to develop upon and learn with. Now that you know the basics, why dont you head back to the <a href="documentation.html">Documentation</a> page, take a look at our APIs and rustle up your own project. And <b>once you are done, why dont you get in touch for a chance to have your web-app featured on our soon-to-be-released hosting platform.</b></p>
 	</div>
 
 	<footer>
