--- a/byteSearch/index.html
+++ b/byteSearch/index.html
@@ -13,38 +13,23 @@
 <body>
     <nav>
         <h1>byteSearch</h1> <span class="spacer4"></span>
-        <input id="searchbox" type="text">
+        <input id="searchbox" type="text" onkeydown="filterKeyPress(event)">
         <a href="#">Web</a>
         <a href="#">Images</a>
         <a href="#">News</a>
     </nav>
     <div class="navSpacer"></div>
     <ul class="resu">
-        <li>apple</li>
     </ul>
     <div class="resultBox">
-        <div class="resultblock" onclick="fetchSearch('apple')">
-            <a class="title" href="#">result one</a>
-            <p class="root">www.wiki.com/</p>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia placeat nihil, dolorem inventore ipsam repellendus
-                optio accusantium alias sapiente molestiae molestias quod vero aut eius.</p>
-        </div>
-
-        <div class="resultblock">
-            <a class="title" href="#">result one</a>
-            <p class="root">www.wiki.com/</p>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia placeat nihil, dolorem inventore ipsam repellendus
-                optio accusantium alias sapiente molestiae molestias quod vero aut eius.</p>
-        </div>
-
-        <div class="resultblock">
-            <a class="title" href="#">result one</a>
-            <p class="root">www.wiki.com/</p>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia placeat nihil, dolorem inventore ipsam repellendus
-                optio accusantium alias sapiente molestiae molestias quod vero aut eius.</p>
-        </div>
+        
     </div>
-
+    <img src="" alt="peep" class="stay">
+    <br>
+    <br>
+    <footer>
+        NucleonBytes 2016
+    </footer>
 </body>
 
 </html>
