--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -15,12 +15,12 @@
     <title>Faith Valley Group</title>
 </head>
 
-<body unselectable="on">
+<body>
     <nav>
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="Tuition.html">Tuition</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="Plan.html">Pricing</a></li>
         </ul>
@@ -51,7 +51,7 @@
     <div class="dish">
         <h1>HOW DO I ENROL MY CHILD?</h1>
         <br>
-        <input type="button" value="LEARN MORE">
+        <input type="button" value="LEARN MORE" onclick="window.location='Tuition.html';">
     </div>
     
     <br>
