--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -15,14 +15,14 @@
     <title>Faith Valley Group</title>
 </head>
 
-<body unselectable="on">
+<body>
     <nav>
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="Tuition.html">Tuition</a></li>
             <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li class="active"><a href="#">Pricing</a></li>
         </ul>
     </nav>
     
