--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -15,13 +15,13 @@
     <title>Faith Valley Group</title>
 </head>
 
-<body unselectable="on">
+<body>
     <nav>
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="Tuition.html">Tuition</a></li>
+            <li class="active"><a href="#">Contact Us</a></li>
             <li><a href="Plan.html">Pricing</a></li>
         </ul>
     </nav>
