--- a/byteSearch/index.html
+++ b/byteSearch/index.html
@@ -20,6 +20,11 @@
         <a class="hidden" href="#">News</a>
     </nav>
     <div class="navSpacer"></div>
+    <div class="plane">
+        <h1>byteSearch</h1>
+        <br>
+        <input id="psearchbox" class="smitebar" type="text" onkeydown="filterKeyPress(event)">
+    </div>
     <ul class="resu">
     </ul>
     <div class="resultBox">
