--- a/byteSearch/index.html
+++ b/byteSearch/index.html
@@ -30,7 +30,8 @@
     <div class="resultBox">
         
     </div>
-    <img src="" alt="peep" class="stay">
+    <!--<img src="" alt="peep" class="stay">-->
+    <div class="stay"><img src="" alt="peep"></div>
     <div class="stayPanel">
         <img class="panelPeek" src="" alt="">
         <h1 class="title">Title</h1>
