--- a/dev/Nitro/Smite/index.html
+++ b/dev/Nitro/Smite/index.html
@@ -5,6 +5,7 @@
     <title>Smite IDE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="sections.css">
+    <link rel="stylesheet" href="tooler.css">
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -12,13 +13,12 @@
         <ul class="container">
             <li class="logo"><a href="#">Smite IDE</a></li>
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Download</a></li>
-            <li><a href="#">Develop</a></li>
+            <li><a href="../Get.html">Download</a></li>
+            <li><a href="../Documentation.html">Develop</a></li>
         </ul>
     </nav>
     <!--<img src="nebula.png" alt="" style="width:100%; margin:0">-->
     <section class="main">
-        <br>
         <br>
         <h1>Smite v3.0</h1>
         <img src="SmiteDesk1.PNG" alt="" style="width:50%">
@@ -26,22 +26,43 @@
     <section class="dish">
         <h1>The evolution of desktop application is here</h1>
     </section>
-    <br>
     <section class="explore">
+        <br>
+        <br>
         <div class="split">
-            <div class="container">
+            <div class="container center">
                 <br>
-                <h1>Fast development at your fingertips!</h1>
+                <h1>Powered by the best, for the best!</h1>
                 <br>
-                <p>NitroJS brings the power of rapid application development to your fingertips; Development and prototyping is combined, giving you more
-                    time to focus on detail and content. With the Nitro framework, applications are written with web technologies yet run at almost native speeds.
+                <p>Smite has been built from the ground up using only the best. We focused on motion and speed, leaving out any nonessentials. We probed the wide web to ensure only the best went into Smite, and when the best simply wasnt enough, we 
+                    created our own. Smite encorporates the ACE editor and NitroJS to yeild the best experience. We removed as many distractions as possible to help you develop faster, and smarter.
                 </p>
             </div>
         </div>
         <div class="split center">
-            <img src="SmiteDesk3.PNG" alt="">
+            <img src="SmiteDesk2.PNG" alt="">
         </div>
     </section>
+    <div class="spacer"></div>
+    <section class="explore">
+        <br>
+        <div class="split center">
+            <img src="SmiteDesk3.PNG" alt="">
+        </div>
+        <div class="split">
+            <div class="container center">
+                <br>
+                <h1>Fast Development at your Fingertips</h1>
+                <br>
+                <p>NitroJS brings the power of rapid application development to your fingertips; Development and prototyping is combined, giving you more
+                    time to focus on detail and content. With the Nitro framework, applications are written with web technologies yet run at almost native speeds.</p>
+            </div>
+        </div>
+    </section>
+    <div class="spacer"></div>
+    <div class="clearSpacer center">
+        <input class="btn" type="button" value="Download">
+    </div>
     <br>
 </body>
 </html>
