--- a/index.html
+++ b/index.html
@@ -1,64 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>NucleonBytes</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="containers.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="script.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>NucleonBytes</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smartBox.css">
+    <link rel="stylesheet" href="containers.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-  <nav>
-    <img src="img/Nucleon_Logo_White.png" alt=""/>
-    <ul>
-      <li><a Id="navhome" href="#">HOME</a></li>
-      <li><a Id="navplans" href="plans.html">PLANS</a></li>
-      <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
-      <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
-      <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <img src="img/Nucleon_Logo_White.png" alt="" />
+        <ul>
+            <li><a Id="navhome" href="#">HOME</a></li>
+            <li><a Id="navplans" href="plans.html">PLANS</a></li>
+            <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
+            <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
+            <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
+        </ul>
+    </nav>
     <div class="hero">
-      <img src="img/nebula.png" alt="" />
-      <h1>NUCLEON BYTES</h1>
+        <img src="img/nebula.png" alt="" />
+        <h1>NUCLEON BYTES</h1>
     </div>
     <div class="container">
-      <div class="col50 paddright2">
-        <h1>WHAT WE DO</h1>
-        <p>
-        We create affordable, manageable and purchasable front-end websites. We design, plan and create your website from our own library of templates which you can choose from. Tailor-made templates are also available for an affordable price.
-        </p>
-      </div>
-      <div class="col50">
-        <h1>CUSTOM TOOLS?</h1>
-        <p>
-          We also accept requests for websites to be made using online tools and platforms such as; Wordpress, Blogger, Weebly and more. If you have a tool you would like us to use, or simply want more information about the tools we use, contact us.
-        </p>
-      </div>
+        <div class="col50 paddright2">
+            <h1>WHAT WE DO</h1>
+            <p>
+                We create affordable, manageable and purchasable front-end websites. We design, plan and create your website from our own
+                library of templates which you can choose from. Tailor-made templates are also available for an affordable
+                price.
+            </p>
+        </div>
+        <div class="col50">
+            <h1>CUSTOM TOOLS?</h1>
+            <p>
+                We also accept requests for websites to be made using online tools and platforms such as; Wordpress, Blogger, Weebly and
+                more. If you have a tool you would like us to use, or simply want more information about the tools we use,
+                contact us.
+            </p>
+        </div>
     </div>
     <br>
     <div class="container">
-      <h1>IN A NUTSHELL... </h1>
-      <p>
-        We will plan, design and create your responsive (mobile-ready) website for you using our set of libraries and tools as well as third party awesomeness. We try our best to deliver at least a prototype of the website within 14 days and our pricing is uber, super flexible. Oh and we also keep it simple :)
-      </p>
+        <h1>IN A NUTSHELL... </h1>
+        <p>
+            We will plan, design and create your responsive (mobile-ready) website for you using our set of libraries and tools as well
+            as third party awesomeness. We try our best to deliver at least a prototype of the website within 14 days and
+            our pricing is uber, super flexible. Oh and we also keep it simple :)
+        </p>
     </div>
-    <div class="container">
-    <div class="joinbox">
-      <a href="mailto:nucleonbytes@gmail.com"><i class="material-icons">record_voice_over</i></a>
-      <br>
-      <h1>INTERESTED? GET IN TOUCH</h1>
-      <p>Are you looking for a high quality, reviewed website design? Not sure about pricing? Why dont you get in touch with us?</p>
-      <br>
-    </div>
+    <div class="spacer"></div>
+    <div class="container centre">
+        <h1>Meet the team</h1>
+        <br>
+        <div class="smartBox">
+            <img class="ign" src="img/team-member-1.jpg" alt="">
+            <h1>Daryl Cecile</h1>
+            <p>Co-Founder</p>
+        </div>
+
+        <div class="smartBox">
+            <img class="ign" src="img/team-member-1.jpg" alt="">
+            <h1>Alimat "Jummy" Bankole</h1>
+            <p>Co-Founder</p>
+        </div>
+
+        <div class="smartBox">
+            <img class="ign" src="img/team-member-1.jpg" alt="">
+            <h1>"Psycoder"</h1>
+            <p>Developer</p>
+        </div>
+        
+        <div class="smartBox">
+        <img class="ign" src="img/team-member-1.jpg" alt="">
+        <h1>Mapple</h1>
+        <p>Designer</p>
+        </div>
+        
+        <div class="smartBox">
+        <img class="ign" src="img/team-member-1.jpg" alt="">
+        <h1>North Point Community</h1>
+        <p>Testers</p>
+        </div>
     </div>
     <br>
-  <footer>
-    2015 NUCLEONBYTES | All Right Reserved
-  </footer>
+    <footer>
+        2015 NUCLEONBYTES | All Right Reserved
+    </footer>
 </body>
+
 </html>
