--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -22,6 +22,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="Tuition.html">Tuition</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="Plan.html">Pricing</a></li>
         </ul>
     </nav>
