--- a/previews/dash/index.html
+++ b/previews/dash/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Dash</title>
+    <link rel="stylesheet" href="master.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">home</a></li>
+            <li><a href="test.html">test</a></li>
+        </ul>
+    </nav>
     Hello world
 </body>
 </html>
