--- a/previews/FaithValleyGroup/gallery.html
+++ b/previews/FaithValleyGroup/gallery.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="Lib/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="Lib/owl-carousel/owl.theme.css">
-    <script src="Lib/owl-carousel/owl.carousel.js"></script>
+    <link rel="stylesheet" href="Lib/nucleon.css">
+    <link rel="stylesheet" href="Lib/fonty.css">
+    <script src="Lib/nucleon.js"></script>
     <script src="actions.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <title>Faith Valley Group</title>
 </head>
@@ -19,13 +19,14 @@
     <nav>
         <ul>
             <li><img src="assets/logo.jpg" alt=""></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="Tuition.html">Tuition</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li class="active"><a href="#">Gallery</a></li>
-            <li><a href="Plan.html">Pricing</a></li>
+            <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
+
     <div class="lightbox hidden">
         <img src="images/photo 2.JPG" alt="" class="master">
     </div>
@@ -53,18 +54,6 @@
     <footer>
         Faith Valley Group 2016
     </footer>
-    
-    <script>
-        $(document).ready(function() {
-            $("#owl-example").owlCarousel({
-                autoPlay: 3000, //Set AutoPlay to 3 seconds
-                items : 1,
-                itemsDesktop : [1199,1],
-                itemsDesktopSmall : [979,1],
-                stopOnHover : true
-            });
-        });
-    </script>
 </body>
 
 </html>
