--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -39,7 +39,7 @@
         <br>
         <div class="splitBox60">
             <p>
-                Faith Valley Group offers first class tuition, where learners from Primary, Secondary and Further Education can achieve their full potential. To ensure our students exceed expectations and maintain a high level of achievements, we constantly review our courses and methods of delivery, matching requirements of school syllabus and examinations, while maintaining a working partnership with parents and schools.
+                Faith Valley Group offers first class tuition, where learners from Primary, Secondary and Further Education can achieve their full potential. To ensure our students exceed expectations and maintain a high level of achievement, we constantly review our courses and methods of delivery, matching requirements of school syllabus and examinations, while maintaining a working partnership with parents and schools.
             </p>
         </div>
         <div class="splitBox40">
@@ -47,11 +47,11 @@
         </div>
         <br>
         <p>
-           Every student has unique potentials, and that is why we strive to bring out the best in your child academically. By providing them with organizational, interventional and academic skills, we are able to improve and maintain high achievements in every learner. We believe that by employing the appropriate teaching methods, carefully selected for each individual, we can help your child to enjoy learning and develop his or her potential.
+           Every student has unique potential, and that is why we strive to bring out the best in your child academically. By providing them with organizational, interventional and academic skills, we are able to improve and maintain a high level of achievement in every learner. We believe that by employing the appropriate teaching methods, carefully selected for each individual, we can help your child to enjoy learning and develop their potential.
         </p>
         <br>
         <p>
-            We aim to help learners develop their ambition and self-esteem; providing them with the extra educational support they require, in a friendly and caring environment. We aim to improve young leaners' attainment in school by helping them overcome any barriers to learning that they may face and build up their confidence.
+            We aim to help learners develop their ambition and self-esteem; providing them with the extra educational support they require, in a friendly and caring environment. We aim to improve young leaners' attainment in school by helping them overcome any barriers to learning that they may face, and build up their confidence.
         </p>
     </section>
 
@@ -70,7 +70,7 @@
     <div class="dish">
         <h1>HOW DO I ENROL MY CHILD?</h1>
         <br>
-        <input type="button" value="LEARN MORE" onclick="window.location='Tuition.html';">
+        <input type="button" value="LEARN MORE" onclick="window.location='contact.html';">
     </div>
         
     <section class="midbox">
@@ -91,7 +91,7 @@
             <li class="plist"> - A Levels (KS5) subject and exam preparation</li>
         </ul>
         <br>
-        <p>So get in touch with us today!</p>
+        <p>So <a href='contact.html'>get in touch</a> with us today!</p>
     </section>
     
     <br><br>
