--- a/previews/FaithValleyGroup/aboutUs.html
+++ b/previews/FaithValleyGroup/aboutUs.html
@@ -49,16 +49,16 @@
         </div>
         <div class="splitBox60">
             <p>
-                The school adopts teaching learning strategies that helps to establish a well grounded platform to engage and empower learners with supplementary support in the subjects enlisted so they can excel academically.
+                The school adopts teaching and learning strategies that help to establish a well grounded platform to engage and empower learners, with supplementary support in the subjects listed so they can excel academically.
             </p>
             <br>
             <p>
-                Faith Valley Tuition believes that <strong>every learner, given the right environment and opportunities, is capable of achieving success</strong>. With the right knowledge and expertise the trained teacher can always make an invaluable impact in the life of a learner.Through teaching, Faith Valley Tuition believes, it is able to share knowledge with those in pursuit knowledge and help them excel.  
+                Faith Valley Tuition believes that <strong>every learner, given the right environment and opportunities, is capable of achieving success</strong>. With the right knowledge and expertise, the trained teacher can always make an invaluable impact in the life of a learner.Through teaching, Faith Valley Tuition believes it is able to share knowledge with those in pursuit knowledge and help them excel.  
             </p>
             <br>
         </div>
         <p>
-            Our objective in teaching is to assist learners pursue and acquire knowledge; improve their attainment levels; achieve and maximize their potential to the fullest.
+            Our objective in teaching is to assist learners to pursue and acquire knowledge, improve their attainment levels, and achieve and maximize their potential to the fullest.
         </p>
         <br>
 
@@ -86,15 +86,10 @@
         </div>
         <div class="splitBox60">
             <p>
-                 Faith Valley Tuition aims to achieve this by enabling young people to recognise and fulfill their potential through developing skulls, confidence and aspirations. Faith Valley Tuition aims to raise the standard of education in the community by creating a <strong>progressive caring and high quality learning environment</strong> for all its learners.
+                 Faith Valley Tuition aims to achieve this by enabling young people to recognise and fulfill their potential through developing skills, confidence and aspirations. Faith Valley Tuition aims to raise the standard of education in the community by creating a <strong>progressive caring and high quality learning environment</strong> for all its learners.
             </p>
             <br>
         </div>
-        <ul>
-            <li class="plist">• We support young people</li>
-            <li class="plist">• We also know that schools need support to engage families and communities in their children’s education and that, equally, these families and communities need support to engage with schools.</li>
-            <li class="plist">• We support families and communities.</li>
-        </ul>
     </section>
 
     <footer>
