--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -34,7 +34,7 @@
     <section class="midbox">
         <h1 class="col-main">Get in touch</h1>
         <br>
-        <p><strong class="emphasise">Email Contact:</strong> faithvalleytuition@gmail.com</p>
+        <p><strong class="emphasise">Email Contact:</strong> <a href="mailto:faithvalleytuition@gmail.com">faithvalleytuition@gmail.com</a></p>
         <br>
         <p><strong class="emphasise">Telephone:</strong> 07515913212</p>
         <br>
