worked on responsiveness

--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -18,7 +18,10 @@
 <body>
     <nav>
         <ul>
-            <li><img src="assets/logo.jpg" alt=""></li>
+            <li class="powerVisible exception">
+                <img id="logo" src="assets/logo.jpg" alt="">
+                <a class="border-menu" id="menubtn" href="javascript:toggleNavOptions()"></a>
+            </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -26,7 +29,9 @@
             <li class="active"><a href="#">Services</a></li>
         </ul>
     </nav>
-        
+    
+    <br>
+    <br>
     <section class="midbox">
         <h1 class="col-main">Our Services</h1>
         <br>
