--- a/previews/FaithValleyGroup/aboutUs.html
+++ b/previews/FaithValleyGroup/aboutUs.html
@@ -20,7 +20,10 @@
 <body>
     <nav>
         <ul>
-            <li><img src="assets/logo.jpg" alt=""></li>
+            <li class="powerVisible exception">
+                <img id="logo" src="assets/logo.jpg" alt="">
+                <a class="border-menu" id="menubtn" href="javascript:toggleNavOptions()"></a>
+            </li>
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="#">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
