--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -18,7 +18,10 @@
 <body>
     <nav>
         <ul>
-            <li><img src="assets/logo.jpg" alt=""></li>
+            <li class="powerVisible exception">
+                <img id="logo" src="assets/logo.jpg" alt="">
+                <a class="border-menu" id="menubtn" href="javascript:toggleNavOptions()"></a>
+            </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutUs.html">About Us</a></li>
             <li class="active"><a href="#">Contact Us</a></li>
@@ -34,9 +37,9 @@
     <section class="midbox">
         <h1 class="col-main">Get in touch</h1>
         <br>
-        <p><strong class="emphasise">Email Contact:</strong> faithvalleytuition@gmail.com</p>
+        <p class="flowdown"><strong class="emphasise">Email Contact:</strong> faithvalleytuition@gmail.com</p>
         <br>
-        <p><strong class="emphasise">Telephone:</strong> 07515913212</p>
+        <p class="flowdown"><strong class="emphasise">Telephone:</strong> 07515913212</p>
         <br>
         <script language="javascript">var sa_email_id = '71801-da96f';var sa_sent_text = 'Thank you for contacting us. We will get back to you soon.';</script>
         <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
