--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -18,7 +18,10 @@
 <body>
     <nav>
         <ul>
-            <li><img src="assets/logo.jpg" alt=""></li>
+            <li class="powerVisible exception">
+                <img id="logo" src="assets/logo.jpg" alt="">
+                <a class="border-menu" id="menubtn" href="javascript:toggleNavOptions()"></a>
+            </li>
             <li class="active"><a href="#">Home</a></li>
             <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -80,7 +83,7 @@
             Faith Valley Group also specialises in exam preparation for key stage 1, 2, and 3, as well as GCSE, and A Level. We provide all our students with the personal attention necessary to help them approach their exams with the utmost confidence. Get in touch today to discover how we can help.
             We specialise in:
         </p>
-        <ul>
+        <ul class="dashList">
             <li class="plist"> - 11 Plus exam preparation</li>
             <li class="plist"> - SATs preparation</li>
             <li class="plist"> - KS1 Literacy and Numeracy</li>
