--- a/previews/FaithValleyGroup/gallery.html
+++ b/previews/FaithValleyGroup/gallery.html
@@ -33,7 +33,7 @@
 
     <div style="min-height:59px"></div>
 
-    <section class="midbox center">
+    <section id="galContainer" class="midbox center">
         <h1 class="col-main">Our Gallery</h1>
         <br>
 
