--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -41,6 +41,8 @@
         <br>
         <p class="flowdown"><strong class="emphasise">Telephone:</strong> 07515913212</p>
         <br>
+        <p class="flowdown"><strong class="emphasise">Address:</strong> Green Leaf School, 80 Greenleaf Road   Walthamstow,   E17 6QW</p>
+        <br>
        <!--  <script language="javascript">var sa_email_id = '71801-da96f';var sa_sent_text = 'Thank you for contacting us. We will get back to you soon.';</script>
         <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
         <div id="sa_contactdiv">
