--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -94,7 +94,7 @@
     </section>
     
     <section class="midbox">
-        <h4>Payments are to be made at the start of every month ahead of session. Under certain circumstances, we may accept weekly payments. Upon receiving your payments we will send you a receipt as proof of payments. Please inform us as soon as possible if you feel you might not be able to make a payment on time. Concessionary pricing is stated below. If you have any enquiries about pricing, concessions or tuitions, contact us today!</h4>
+        <h4>Payments are to be made at the start of every month ahead of session. Under certain circumstances, we may accept weekly payments. Upon receiving your payments we will send you a receipt as proof of payments. Please inform us as soon as possible if you feel you might not be able to make a payment on time. Concessionary pricing is available. If you have any enquiries about pricing, concessions or tuitions, contact us today!</h4>
     </section>
     
     <!-- <section class="midbox">
