--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -43,21 +43,13 @@
         <br>
         <p class="flowdown"><strong class="emphasise">Address:</strong> Green Leaf School, 80 Greenleaf Road   Walthamstow,   E17 6QW</p>
         <br>
-       <!--  <script language="javascript">var sa_email_id = '71801-da96f';var sa_sent_text = 'Thank you for contacting us. We will get back to you soon.';</script>
-        <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
-        <div id="sa_contactdiv">
-            <form name=sa_htmlform style="margin:0px;width:100%" onsubmit="return sa_contactform()">
-                <table style="width:100%">
-                    <tr><td>First Name:<br><input type="text" name="firstname" /></td></tr>
-                    <tr><td>Second Name:<br><input type="text" name="secondname" /></td></tr>
-                    <tr><td>E-mail Address: <span style="color:#D70000">*</span><br><input type="text" name="email" required="true" /></td></tr>
-                    <tr><td>Message: <span style="color:#D70000">*</span><br><textarea name="message" cols="42" rows="9" required="true"></textarea></td></tr>
-                    <tr><td><input type="submit" value="Send Message" style="font-weight:bold"></td></tr>
-                </table>
-            </form>
-        </div> -->
-        <script type="text/javascript"> id = 203255; </script>
-        <script type="text/javascript" src="http://kontactr.com/wp.js"></script>
+        <div class="splitBox66">
+            <script type="text/javascript"> id = 203255; </script>
+            <script type="text/javascript" src="http://kontactr.com/wp.js"></script>
+        </div>
+        <div class="splitBox33">
+            <img src="assets/pencil.png">
+        </div>
                         
     </section>
     
