--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -58,18 +58,6 @@
             We aim to help learners develop their ambition and self-esteem; providing them with the extra educational support they require, in a friendly and caring environment. We aim to improve young leaners' attainment in school by helping them overcome any barriers to learning that they may face, and build up their confidence.
         </p>
     </section>
-
-    <!-- <section class="midbox">
-        <h1 class="col-main">Students are Welcome at Faith Valley Group Tuition Centre</h1>
-        <br>
-        <p>
-            Faith Valley Group Tuition offers the highest quality tuition services to students of Primary, Secondary, and Further Education levels. To ensure our students exceed expectations and maintain a high level of achievements, we constantly review our courses and methods of delivery, matching requirements of school syllabus and examinations. We constantly record and analyse student progress to ensure that we provide appropriate resources and tailor-made notes to supplement what the students are learning in school.
-        </p>
-        <br>
-        <p>
-           We believe that each student has unique potential. Faith Valley Group Tuition strives to bring out the best in your child academically. We believe that by employing the appropriate teaching methods, carefully selected for each individual, we can help your child to enjoy learning and develop his or her potential. We keep in very close contacts with parents, ensuring they are kept to date with their child's progress.
-        </p>
-    </section>  --> 
     
     <div class="dish">
         <h1>HOW DO I ENROL MY CHILD?</h1>
@@ -79,21 +67,26 @@
         
     <section class="midbox">
         <h1 class="col-main">Exam preparation</h1>
-        <br>
-        <p>
-            Faith Valley Group also specialises in exam preparation for key stage 1, 2, and 3, as well as GCSE, and A Level. We provide all our students with the personal attention necessary to help them approach their exams with the utmost confidence. Get in touch today to discover how we can help.
-            We specialise in:
-        </p>
-        <ul class="dashList">
-            <li class="plist"> - 11 Plus exam preparation</li>
-            <li class="plist"> - SATs preparation</li>
-            <li class="plist"> - KS1 Literacy and Numeracy</li>
-            <li class="plist"> - KS2 English, Literacy, Science and Mathematics</li>
-            <li class="plist"> - KS3 English, Maths and Science</li>
-            <li class="plist"> - KS4 English, Maths and Science</li>
-            <li class="plist"> - GCSE (KS4) exam preparation</li>
-            <li class="plist"> - A Levels (KS5) subject and exam preparation</li>
-        </ul>
+        <div class="splitBox66">
+            <br>
+            <p>
+                Faith Valley Group also specialises in exam preparation for key stage 1, 2, and 3, as well as GCSE, and A Level. We provide all our students with the personal attention necessary to help them approach their exams with the utmost confidence. Get in touch today to discover how we can help.
+                We specialise in:
+            </p>
+            <ul class="dashList">
+                <li class="plist"> - 11 Plus exam preparation</li>
+                <li class="plist"> - SATs preparation</li>
+                <li class="plist"> - KS1 Literacy and Numeracy</li>
+                <li class="plist"> - KS2 English, Literacy, Science and Mathematics</li>
+                <li class="plist"> - KS3 English, Maths and Science</li>
+                <li class="plist"> - KS4 English, Maths and Science</li>
+                <li class="plist"> - GCSE (KS4) exam preparation</li>
+                <li class="plist"> - A Levels (KS5) subject and exam preparation</li>
+            </ul>
+        </div>
+        <div class="splitBox33">
+            <img src="assets/pencil.png">
+        </div>
         <br>
         <p>So <a href='contact.html'>get in touch</a> with us today!</p>
     </section>
